Changed the name.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
     <head>
 
     </head>
-    <body>
-        Welcome!! Sample
-    </body>
+	<script>
+	kljklsjdfk kldfjslkjd slkdjflk jsldkfj lksdjflk jsdlkfj lskdjf lksdjf
+	</script>
+    <body2>
+        Welcome!! Sample!!!
+    </body2>
 </html>
